--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_C_STANDARD 11)
 include_directories(include)
 
 add_library(libcollect map.c include/collect/map.h hash.c include/collect/hash.h
-        include/collect/vector.h vector.c)
+        include/collect/vector.h vector.c
+        include/collect/list.h list.c)
 
 add_executable(test-collect test.c)
 target_link_libraries(test-collect libcollect)
